changes done for docker configuration

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -15,7 +15,7 @@ spring:
     username: root
     password: root
   config:
-    import: configserver:http://localhost:9296
+    import: optional:configserver:http://localhost:9296
 
 
 
