--- a/pom.xml
+++ b/pom.xml
@@ -49,10 +49,10 @@
 			<version>3.0.5</version>
 		</dependency>-->
 		<!--Config-->
-		<!--<dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
-		</dependency>-->
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
